[package]
name = "ripunzip"
version = "2.0.2"
edition = "2021"
authors = ["Adrian Taylor <adetaylor@chromium.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A tool to unzip an archive in parallel"
repository = "https://github.com/google/ripunzip"
rust-version = "1.70"

[dependencies]
ripunzip_lib = { path = "..//ripunzip_lib" }
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
env_logger = "0.10.0"
indicatif = "0.17.2"
wildmatch = "2.1.1"
